--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,70 +1,30 @@
-@(title: String, javascript: Html = Html(""))(content: Html)
+@()
 <!DOCTYPE html>
-<html ng-app="swanaudio">
-<head>
-<title>Swan Audio - @title</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" media="screen" href="@routes.WebJarAssets.at(WebJarAssets.locate("bootstrap.min.css"))">
-<link rel="stylesheet" media="screen" href="@routes.Assets.at("css/main.css")">
-<link rel="stylesheet" media="screen" href="@routes.Assets.at("foo.js")">
-<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
-<link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.ico")">
-</head>
-<body>
-<header>
-  <div class="minibar minibar-dark">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12 text-right">
-          &nbsp;
-        </div>
-      </div>
-    </div>
-  </div>
-  <nav class="navbar navbar-default navbar-static-top navbar-dark" role="navigation">
-    <div class="container">
-      <ul class="nav navbar-nav navbar-left">
-        <li><a href="@routes.Application.index" class="navbar-brand">Swan Audio</a></li>
-      </ul>
-      <button data-target=".navbar-collapse" data-toggle="collapse" class="navbar-toggle collapsed" type="button">
-        <i class="fa fa-bars"></i>
-      </button>
-      <ul class="nav navbar-nav navbar-right navbar-collapse collapse">
-        <li><a href="@routes.Application.products">Products</a></li>
-        <li><a href="#">Research</a></li>
-        <li><a href="@routes.Application.contact">About</a></li>
-        <li><a href="#">News</a></li>
-      </ul>
-    </div>
-  </nav>
-</header>
-@content
-<footer class="footbar">
-  <div class="container">
-    <div class="row">
-      <div class="col-xs-6 text-left">
-          <ul class="list-inline">
-            <li><a href="https://twitter.com/swanaudio"><i class="fa fa-twitter"></i></a></li>
-            <li><a href="https://github.com/SwanAudio"><i class="fa fa-github"></i></a></li>
-            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-          </ul>
-      </div>
-      <div class="col-xs-6 small text-right">
-        <ul class="list-inline">
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
-          <li><a href="#">Privacy Policy</a></li>
-          <li><a href="#">Terms of Use</a></li>
-        </ul>
-        Copyright &copy; 2014 Swan Audio. All rights reserved.
-      </div>
-    </div>
-  </div>
-</footer>
-<script src="@routes.WebJarAssets.at(WebJarAssets.locate("jquery.min.js"))" type="text/javascript"></script>
-<script src="@routes.WebJarAssets.at(WebJarAssets.locate("bootstrap.min.js"))" type="text/javascript"></script>
-<script src="@routes.WebJarAssets.at(WebJarAssets.locate("1.3.0-beta.2/angular.min.js"))" type="text/javascript"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/holder/2.3.0/holder.js" type="text/javascript"></script>
-@javascript
-</body>
+<html lang="en" data-framework="angular2">
+  <head>
+    <base href="/" />
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+
+    <title>Swan Audio</title>
+
+    <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("swan-audio-pin-final-2000x2000-png8.png")">
+    <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans" rel="stylesheet">
+    <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("lib/normalize.css/normalize.css")">
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
+    <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.min.css")">
+
+    <script type='text/javascript' src='@routes.Assets.versioned("lib/systemjs/dist/system-polyfills.js")'></script>
+    <script type='text/javascript' src='@routes.Assets.versioned("lib/core-js/client/shim.min.js")'></script>
+    <script type='text/javascript' src='@routes.Assets.versioned("lib/zone.js/dist/zone.js")'></script>
+    <script type='text/javascript' src='@routes.Assets.versioned("lib/reflect-metadata/Reflect.js")'></script>
+    <script type='text/javascript' src='@routes.Assets.versioned("lib/systemjs/dist/system.src.js")'></script>
+
+
+    <script src='@routes.Assets.versioned("javascripts/system.js")'></script>
+  </head>
+  <body>
+    <swanaudio>Loading ...</swanaudio>
+  </body>
 </html>
